# finger_conductivity_simulator

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
app/: Home.py
app/components/finger_canvas/: __init__.py
app/components/finger_canvas/frontend/: finger_canvas.js  geometry.js  index.html  webgpu_renderer.js
app/lib/: __init__.py  dataset_io.py  figures.py  nav.py  palette.py  state.py  ui.py
app/views/: dataset_viewer.py  finger_model.py  hub.py  mesh_export.py  waveform.py
configs/: default_finger.json
docs/: GCNM_DATA_CONTRACT.md  PLAN.md
meshes/: README.md
meshes/collections/b035/US060/: manifest.json  ring_US060_fwd.h5  ring_US060_inv.h5  ring_US060_mappings_40.h5
meshes/collections/b035/US065/: manifest.json  ring_US065_fwd.h5  ring_US065_inv.h5  ring_US065_mappings_40.h5
meshes/collections/b035/US070/: manifest.json  ring_US070_fwd.h5  ring_US070_inv.h5  ring_US070_mappings_40.h5
meshes/collections/b035/US075/: manifest.json  ring_US075_fwd.h5  ring_US075_inv.h5  ring_US075_mappings_40.h5
meshes/collections/b035/US080/: manifest.json  ring_US080_fwd.h5  ring_US080_inv.h5  ring_US080_mappings_40.h5
meshes/subject001_US140_estimated/: manifest.json  ring_US140_fwd.h5  ring_US140_mappings_40.h5
meshes/subject006_US120/: manifest.json  ring_US120_fwd.h5
scripts/: run_app.bat  run_app.sh
src/finger_sim/: __init__.py  augmentation.py  cli.py  dataset.py  dataset_cli.py  export.py  geometry.py  mesh.py  models.py  project.py  simulation.py  waveforms.py
tests/: test_mesh.py  test_project.py  test_simulation.py
(+130 files in other folders)
