[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finger-conductivity-simulator"
version = "0.1.0"
description = "Interactive parametric finger conductivity and pulse-delta simulator for PVI EIT/GCNM research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "h5py>=3.9",
  "plotly>=5.20",
  "streamlit>=1.35",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
finger-sim-export = "finger_sim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

